--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Danger is my middle name...</h1>
-    <a href="dashboard.html">dash</a>
+    <a href="chat.html">dash</a>
   </body>
 </html>
