--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Danger is my middle name...</h1>
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('', '#72a4f2', 'X8X11PY7E8');kofiwidget2.draw();</script> 
     <a href="chat.html">dash</a>
   </body>
 </html>
