--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="CSS/styles.css">
     <title>Gangsta D's totally tuff website</title>
   </head>
   <body>
